[package]
name = "pdf-form"
version = "0.1.4"
authors = ["Björn Gehrke"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lopdf = "0.25.0"
bitflags = "1.0.1"
derive-error = "0.0.4"
regex = "1.3.9"

wasm-bindgen = "0.2.63"

serde-wasm-bindgen = "0.1.3"
serde = { version = "1.0.115", features = ["derive"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
